test/errors/templates_error/zs/instantiate_duplicated_name_error.zs
package instantiate_duplicated_name_error;

struct Test<T>
{
    T value;
};

instantiate Test<string> Str;
instantiate Test<uint8_t> Str;
